ini update allure selanjutnya

--- a/.github/workflows/deploy-allure.yml
+++ b/.github/workflows/deploy-allure.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Deploy to GitHub Pages 🚀
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
+          github_token: ${{ secrets.GH_TOKENS }}
           publish_dir: ./merged-allure-report
           publish_branch: gh-pages
           force_orphan: true
