--- a/.github/workflows/deploy-allure.yml
+++ b/.github/workflows/deploy-allure.yml
@@ -40,6 +40,13 @@ jobs:
       - name: Run Allure tests and generate report
         run: ./merge-allure.sh
 
+## upload laporan Allure sebagai artifact
+      - name: Upload Allure Report as Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: merged-allure-report
+
 ## deploy laporan Allure ke GitHub Pages
       - name: Deploy to GitHub Pages 🚀
         uses: peaceiris/actions-gh-pages@v3
